--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,9 @@ html {
   --second-bg-color: #2F303A;
   --icon-color: #AFB1B8;
   --black-color: #000;
+  --work-text-bg-color: rgba(47, 48, 58, 0.8);
+  --modal-backdrope-bg-color: rgba(0, 0, 0, 0.2);
+  --project-image-overley-color: rgba(33, 150, 243, 0.9);
 }
 
 body {
@@ -41,6 +44,7 @@ body {
 }
 
 .section { 
+  
   
   margin-left: auto;
   margin-right: auto;
@@ -116,6 +120,8 @@ body {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -123,6 +129,60 @@ body {
 }
 .site-nav .link.current {
   color: var(--accent-color);
+}
+
+/*  Підкреслення  посилання поточної сторінки */
+
+.site-nav .link.current { 
+  position: relative;
+}
+
+.site-nav .link.current::after { 
+  position: absolute;
+  bottom: 0;
+
+  
+
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px ;
+  background-color: var(--accent-color);
+border-radius: 2px;
+
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+/*  Підкреслення  посилання  сторінки  при hover */
+
+.site-nav .link.noncurrent { 
+  position: relative;
+}
+
+.site-nav .link.noncurrent::after { 
+  position: absolute;
+  bottom: 0;
+
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px ;
+  background-color: var(--accent-color);
+border-radius: 2px;
+
+opacity: 0;
+
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.site-nav .link.noncurrent:hover::after { 
+  opacity: 1;
+}
+
+.site-nav .link.noncurrent:focus::after { 
+  opacity: 1;
 }
 
 /* contacts list */
@@ -150,6 +210,8 @@ body {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-list .link:hover,
 .contacts-list .link:focus {
@@ -322,6 +384,37 @@ body {
 /* прибираємо зазор 4px в img */
 .work-image {
   display: block;
+
+  width: 370px;
+  height: 294px;
+}
+
+.work-wrapper { 
+position: relative;
+
+}
+
+.work-text.wrapper { 
+  position: absolute;
+  bottom: 0;
+
+ display: flex; 
+align-items: center;
+justify-content: center; 
+
+width: 370px;
+height: 70px;
+  
+background-color: var(--work-text-bg-color) ;
+}
+
+.work-text { 
+
+color: var(--white-color);
+
+font-weight: bold;
+text-align: center;
+text-transform: uppercase;
 }
 
 /* section team */
@@ -389,6 +482,8 @@ body {
 
   width: 44px;
   height: 44px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-linklist { 
@@ -431,6 +526,7 @@ body {
 
   cursor: pointer;
 
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-list .item:hover,
@@ -455,6 +551,8 @@ body {
   height: 100%;
 
   color: currentColor;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -498,6 +596,8 @@ address {
   text-decoration: none;
 
   line-height: 1.71;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .map:hover,
 .map:focus {
@@ -512,6 +612,8 @@ address {
   text-decoration: none;
 
   line-height: 1.71;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact.date:hover,
@@ -555,6 +657,8 @@ address {
 
   width: 44px;
   height: 44px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  
 }
 
@@ -570,6 +674,73 @@ address {
 .social-iconfooter { 
   fill: currentColor;
 }
+
+/* Модальне вікно  */
+
+.backdrop { 
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+
+  background-color: var(--modal-backdrope-bg-color) ;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.backdrop.is-hidden { 
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal { 
+  transform: translate(-50%, -50%) scale(0.5);
+  opacity: 0;
+}
+
+
+.modal { 
+position: absolute;
+
+left: 50%;
+top: 50%;
+
+width: 528px;
+height: 581px;
+padding: 0;
+margin: 0;
+border: 0;
+
+background: var(--white-color);
+
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
+0px 1px 1px rgba(0, 0, 0, 0.14), 
+0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+
+transform: translate(-50%, -50%) scale(1);
+opacity: 1;
+transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
+}
+
+.button.inmodal { 
+  position: absolute;
+
+  top: 8px;
+  right: 8px;
+
+  border: 0;
+  
+  background: var(--white-color);
+  
+}
+
 
 
 /* Сторінка Портфолио */
@@ -604,6 +775,9 @@ address {
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button.portfolio:hover,
@@ -647,6 +821,10 @@ address {
 .project-link {
   display: block;
   text-decoration: none;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  
 }
 .project-link:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
@@ -692,4 +870,46 @@ address {
   text-decoration: none;
   font-size: 16px;
   line-height: 1.87;
+}
+
+/*   Синій оверлей с текстом на карточках сторінки Портфолио  */
+
+.project-image-wrapper { 
+  position: relative;
+
+}
+.project-text-wrapper { 
+  position: absolute;
+  top: 0;
+
+  width: 370px;
+  height: 294px;
+  padding: 63px 24px;
+
+  background-color: var(--project-image-overley-color);
+
+  transform: translateY(100%);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.project-text-wrapper.is-hidden { 
+  opacity: 0;
+  pointer-events: none;
+}
+
+.project-link:hover .project-text-wrapper.is-hidden { 
+  opacity: 1;
+  transform: translateY(0);
+
+}
+.project-text { 
+
+  color: var(--white-color);
+
+  font-size: 18px;
+line-height: 1.56;
+
 }
